Description of Myself

--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+---
+layout: default
+---
+
+<h1>Emma Reed's Page</h1>
+<ol>
+  <li>I am a junior</li>
+  <li>I am from San Diego, California </li>
+</ol>
+<h3>I Love Spicy Food</h3>
+  <img src="images/spicy.jpg" alt="spicy peppers" width="500">
