--- a/index.html
+++ b/index.html
@@ -9,3 +9,4 @@ layout: default
 </ol>
 <h3>I Love Spicy Food</h3>
   <img src="images/spicy.jpg" alt="spicy peppers" width="500">
+   <a href="https://emmareed.github.io/project-1/">My New Project Page</a>
