--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
   <li>I am a junior</li>
   <li>I am from San Diego, California </li>
 </ol>
-<h3>I Love Spicy Food</h3>
+<h3>I Love Spicy Food</h3> <br>
   <img src="images/spicy.jpg" alt="spicy peppers" width="500">
-   <a href="https://emmareed.github.io/project-1/">My New Project Page</a>
+   <a href="https://emmareed.github.io/project-1/">Project 1</a>
+   <a href="https://emmareed.github.io/project-2/">Project 2</a>
