--- a/index.html
+++ b/index.html
@@ -11,3 +11,4 @@ layout: default
   <img src="images/spicy.jpg" alt="spicy peppers" width="500">
    <a href="https://emmareed.github.io/project-1/">Project 1</a>
    <a href="https://emmareed.github.io/project-2/">Project 2</a>
+   <a href="https://emmareed.github.io/project-2/">Project 3</a>
