--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@ layout: default
   <li>I am a junior</li>
   <li>I am from San Diego, California </li>
 </ol>
-<h3>I Love Spicy Food</h3> <br>
-  <img src="images/spicy.jpg" alt="spicy peppers" width="500">
-   <a href="https://emmareed.github.io/project-1/">Project 1</a>
-   <a href="https://emmareed.github.io/project-2/">Project 2</a>
-   <a href="https://emmareed.github.io/project-2/">Project 3</a>
+<h3>I Love Spicy Food</h3>
+  <img src="images/spicy.jpg" alt="spicy peppers" width="500"> <br>
+   <a href="https://emmareed.github.io/project-1/">Project 1</a> <br>
+   <a href="https://emmareed.github.io/project-2/">Project 2</a> <br>
+   <a href="https://emmareed.github.io/project-2/">Project 3</a> <br>
+   <a href="https://emmareed.github.io/project-2/">Project 4</a> <br>
